Ajax and setTimeout examples

--- a/flask/templates/musicmarketplace.html
+++ b/flask/templates/musicmarketplace.html
@@ -102,6 +102,12 @@
                 <li><a href="#" onclick="show_lesson_details('{{ lesson.demo_url }} ', '{{ lesson.days }}', '{{ lesson.timings }}')">{{ lesson.name }}</a></li>
               {% endfor %}
             </ul>
+            <hr></hr>
+            <div>
+              <h3>Signups:</h3>
+              <ul id="signups">
+              </ul>
+            </div>
           </div>
         </div>
       </div>
